[package]
name = "ec-Curve25519"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = { version = "0.5", default-features = false }
# rand_core = { version = "0.6.4", features = ["getrandom"] }
x25519-dalek = "1.2.0"
